WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76456
[CSS Regions] Inconsistent text selection behavior in regions
https://bugs.webkit.org/show_bug.cgi?id=76456
Summary
[CSS Regions] Inconsistent text selection behavior in regions
Razvan Caliman
Reported
2012-01-17 07:52:47 PST
Created
attachment 122769
[details]
test case As a user, I want to be able to select all the text from the second region from a region chain. Text selection behavior is inconsistent when trying to select text from the second region of a region chain. Sometimes I cannot select any text at all. Other times parts of the text from the first region are mistakenly included in the selection.
Attachments
test case
(8.71 KB, text/html)
2012-01-17 07:52 PST
,
Razvan Caliman
no flags
Details
Simple fix, no tests
(3.07 KB, patch)
2012-02-02 02:18 PST
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
patch for review
(6.26 KB, patch)
2012-02-06 06:51 PST
,
Raul Hudea
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-01-17 11:42:21 PST
Yup, see
https://lists.webkit.org/pipermail/webkit-dev/2012-January/019029.html
. This problem isn't specific to regions. That said, repaint appears to be broken. If I select from both columns, then click elsewhere to remove the selection, the second column still appears selected (although it's not).
Alexandru Chiculita
Comment 2
2012-02-02 02:18:21 PST
Created
attachment 125102
[details]
Simple fix, no tests
Raul Hudea
Comment 3
2012-02-06 06:51:39 PST
Created
attachment 125636
[details]
patch for review
Dave Hyatt
Comment 4
2012-02-13 12:45:03 PST
Comment on
attachment 125636
[details]
patch for review r=me
WebKit Review Bot
Comment 5
2012-02-13 14:02:44 PST
Comment on
attachment 125636
[details]
patch for review Clearing flags on attachment: 125636 Committed
r107605
: <
http://trac.webkit.org/changeset/107605
>
WebKit Review Bot
Comment 6
2012-02-13 14:02:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug