[CSS Regions] Inconsistent text selection behavior in regions https://bugs.webkit.org/show_bug.cgi?id=76456

Patch by Raul Hudea <rhudea@adobe.com> on 2012-02-13
Reviewed by David Hyatt.

Source/WebCore:

Use the proper bounding rect when doing hit testing on flow threads.
Based on initial patch by Alexandru Chiculita.

Test: fast/regions/hit-test-region.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::hitTestRegion):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTest):
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::nodeAtPoint):

LayoutTests:

* fast/regions/hit-test-region-expected.txt: Added.
* fast/regions/hit-test-region.html: Added.

Canonical link: https://commits.webkit.org/95463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107605 268f45cc-cd09-0410-ab3c-d52691b4dbfc